Added Unit Tests for Relationships/Ids; Refactored Mgr to support leaves